Fix 'CV' margin on about page on smaller resolutions

--- a/res/css/about.css
+++ b/res/css/about.css
@@ -1,4 +1,5 @@
 h2 {
+    margin: 28px 0 38px;
     text-align: center;
 }
 
@@ -17,4 +18,12 @@ main img {
     display: block;
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+
+    .small-margin {
+        margin-top: 24px;
+    }   
+    
 }
